@@ -1,3 +1,7 @@
+2004-05-06	Reinhard Spisser
+
+	* Patch #779 send pending tracker/task notifications
+
 2004-05-05  Jason Chen
 
 	* Updated chinese.tab
